// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with anonymous user 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt="List palette logo"
          class="mr-2"
          height="48"
          src="logo192.svg"
        />
        List Palette
      </a>
      <button
        aria-controls="navbarCollapse"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-target="#navbarCollapse"
        data-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarCollapse"
      >
        <ul
          class="navbar-nav mr-auto"
        >
          <li
            class="nav-item"
          >
            <button
              class="nav-link"
            >
              About
            </button>
          </li>
        </ul>
        <button
          class="btn btn-success mx-1 my-2 my-sm-0"
        >
          Sign in
        </button>
        <button
          class="btn btn-outline-success my-2 my-sm-0"
        >
          Sign up
        </button>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="location"
    >
      <button
        class="location-button"
      >
        Home&gt;
      </button>
    </div>
    <div
      class="form"
    >
      <input
        type="text"
        value=""
      />
      <button>
        <span
          class="add-span"
        >
          Add
        </span>
      </button>
    </div>
    <div
      class="list"
    >
      <div
        class="item"
        draggable="true"
      >
        <svg
          class="bi bi-caret-right-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        />
        People
        <img
          alt="delete icon"
          class="icon"
          src="/icons/delete-icon.svg"
        />
        <img
          alt="edit icon"
          class="icon"
          src="/icons/edit-icon.svg"
        />
        <img
          alt="focus icon"
          class="icon"
          src="/icons/focus-icon.svg"
        />
        <img
          alt="merge icon"
          class="icon"
          src="/icons/merge-icon.svg"
        />
      </div>
      <div
        class="item"
        draggable="true"
      >
        <svg
          class="bi bi-caret-right-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        />
        To-do
        <img
          alt="delete icon"
          class="icon"
          src="/icons/delete-icon.svg"
        />
        <img
          alt="edit icon"
          class="icon"
          src="/icons/edit-icon.svg"
        />
        <img
          alt="focus icon"
          class="icon"
          src="/icons/focus-icon.svg"
        />
        <img
          alt="merge icon"
          class="icon"
          src="/icons/merge-icon.svg"
        />
      </div>
      <div
        class="item"
        draggable="true"
      >
        <svg
          class="bi bi-caret-right-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        />
        Groceries
        <img
          alt="delete icon"
          class="icon"
          src="/icons/delete-icon.svg"
        />
        <img
          alt="edit icon"
          class="icon"
          src="/icons/edit-icon.svg"
        />
        <img
          alt="focus icon"
          class="icon"
          src="/icons/focus-icon.svg"
        />
        <img
          alt="merge icon"
          class="icon"
          src="/icons/merge-icon.svg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with signed-in user 1`] = `
<DocumentFragment>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        <img
          alt="List palette logo"
          class="mr-2"
          height="48"
          src="logo192.svg"
        />
        List Palette
      </a>
      <button
        aria-controls="navbarCollapse"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-target="#navbarCollapse"
        data-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarCollapse"
      >
        <ul
          class="navbar-nav mr-auto"
        >
          <li
            class="nav-item"
          >
            <button
              class="nav-link"
            >
              About
            </button>
          </li>
        </ul>
        <div
          class="navbar-nav"
        >
          <button
            class="nav-link mr-1"
          >
            John
          </button>
          <button
            class="btn btn-secondary my-2 my-sm-0"
          >
            Sign out
          </button>
        </div>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="location"
    >
      <button
        class="location-button"
      >
        Home&gt;
      </button>
    </div>
    <div
      class="form"
    >
      <input
        type="text"
        value=""
      />
      <button>
        <span
          class="add-span"
        >
          Add
        </span>
      </button>
    </div>
    <div
      class="list"
    >
      <div
        class="item"
        draggable="true"
      >
        <svg
          class="bi bi-caret-right-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        />
        People
        <img
          alt="delete icon"
          class="icon"
          src="/icons/delete-icon.svg"
        />
        <img
          alt="edit icon"
          class="icon"
          src="/icons/edit-icon.svg"
        />
        <img
          alt="focus icon"
          class="icon"
          src="/icons/focus-icon.svg"
        />
        <img
          alt="merge icon"
          class="icon"
          src="/icons/merge-icon.svg"
        />
      </div>
      <div
        class="item"
        draggable="true"
      >
        <svg
          class="bi bi-caret-right-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        />
        To-do
        <img
          alt="delete icon"
          class="icon"
          src="/icons/delete-icon.svg"
        />
        <img
          alt="edit icon"
          class="icon"
          src="/icons/edit-icon.svg"
        />
        <img
          alt="focus icon"
          class="icon"
          src="/icons/focus-icon.svg"
        />
        <img
          alt="merge icon"
          class="icon"
          src="/icons/merge-icon.svg"
        />
      </div>
      <div
        class="item"
        draggable="true"
      >
        <svg
          class="bi bi-caret-right-fill"
          fill="currentColor"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        />
        Groceries
        <img
          alt="delete icon"
          class="icon"
          src="/icons/delete-icon.svg"
        />
        <img
          alt="edit icon"
          class="icon"
          src="/icons/edit-icon.svg"
        />
        <img
          alt="focus icon"
          class="icon"
          src="/icons/focus-icon.svg"
        />
        <img
          alt="merge icon"
          class="icon"
          src="/icons/merge-icon.svg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
